[gd_scene load_steps=9 format=3 uid="uid://bapnkwhqqbjqc"]

[ext_resource type="Script" path="res://bhaygon_workplace/hud/hud.gd" id="1_0din3"]
[ext_resource type="FontFile" uid="uid://c21e260ko4f3t" path="res://assets/MinimalPixel v2.ttf" id="1_1irlt"]
[ext_resource type="Texture2D" uid="uid://bvvgwe77bjfk5" path="res://assets/DoubleJumpIcon.png" id="1_bjmhq"]
[ext_resource type="Texture2D" uid="uid://7hxu3ly5pbiy" path="res://assets/GUI.png" id="2_7xsqh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4gcs"]
atlas = ExtResource("2_7xsqh")
region = Rect2(50, 34, 44, 12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8y14t"]
texture = SubResource("AtlasTexture_a4gcs")
expand_margin_left = 20.0
expand_margin_top = 10.0
expand_margin_right = 20.0
expand_margin_bottom = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_j18l4"]
atlas = ExtResource("2_7xsqh")
region = Rect2(50, 34, 44, 12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jd3pu"]
texture = SubResource("AtlasTexture_j18l4")
expand_margin_left = 20.0
expand_margin_top = 10.0
expand_margin_right = 20.0
expand_margin_bottom = 10.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0din3")

[node name="StartContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -13.0
offset_right = 50.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="StartContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="StartContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("1_1irlt")
theme_override_font_sizes/font_size = 50
text = "PUMPKENNY"
horizontal_alignment = 1

[node name="Button" type="Button" parent="StartContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_1irlt")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxTexture_8y14t")
theme_override_styles/hover = SubResource("StyleBoxTexture_jd3pu")
text = "PLAY"

[node name="Display" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Display"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Display/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1irlt")
theme_override_font_sizes/font_size = 20
text = "SCORE:"

[node name="ScoreText" type="Label" parent="Display/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_1irlt")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="Display/HBoxContainer"]
layout_mode = 2

[node name="DoubleJumpIcon" type="TextureRect" parent="Display/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_bjmhq")
expand_mode = 3
stretch_mode = 5

[node name="DoubleJumpIcon2" type="TextureRect" parent="Display/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_bjmhq")
expand_mode = 3
stretch_mode = 5

[node name="DoubleJumpIcon3" type="TextureRect" parent="Display/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_bjmhq")
expand_mode = 3
stretch_mode = 5

[connection signal="pressed" from="StartContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
